tests/errors/sem9.kt
fun main(){
    val z = undeclaredFunction(3)

}